# Raycasting-game

./: meson.build
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  map.cpp  map.h  output  player.cpp  player.h  raycast.cpp  raycast.h  renderer.cpp  renderer.h
src/.cache/clangd/index/: main.cpp.8C6503A5299E6022.idx  map.cpp.91D18E47A4BCD6B4.idx  map.h.C8374D2094EDAB16.idx  player.h.F034240FBCB7BD4E.idx
